# rom_socket

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakeLists_test.txt  README.md  TEST_WIFI.md  WIFI_COMMANDS.md  check_wifi_setup.sh  ip.md  test_wifi.cpp
build_test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test_wifi
build_test/test_wifi_autogen/: mocs_compilation.cpp
build_test/test_wifi_autogen/YGXV7YSWOW/: moc_ssl_client.cpp  moc_ssl_client.cpp.d
build_test/test_wifi_autogen/include/: test_wifi.moc  test_wifi.moc.d
examples/: wifi_test_client.cpp
secret/: server.crt  server.key
src/: main.cpp  ssl_client.cpp  ssl_client.h  ssl_server.cpp  ssl_server.h  wifi_configurator.cpp  wifi_configurator.h  wifi_manager.cpp  wifi_manager.h  wifi_tcp_server.cpp  wifi_tcp_server.h
